--- a/index.html
+++ b/index.html
@@ -1,135 +1,41 @@
-
-
 <!DOCTYPE html>
 <html lang="en">
 <head>
   <meta charset="UTF-8" />
   <meta name="viewport" content="width=device-width, initial-scale=1.0"/>
-  <title>∅ e240 Github page</title>
-  <style>
-    :root {
-      --text: #222;            /* de-blacked: deep graphite */
-      --bg: #f9f9f9;           /* not pure white */
-      --border: #ccc;
-      --highlight: #555;
-      --code-bg: #eee;
-    }
-
-    * {
-      margin: 0;
-      padding: 0;
-      box-sizing: border-box;
-    }
-
-    body {
-      font-family: 'Courier New', monospace;
-      background: var(--bg);
-      color: var(--text);
-      padding: 2rem;
-    }
-
-    .container {
-      display: grid;
-      grid-template-rows: auto 1fr auto;
-      gap: 2rem;
-      max-width: 960px;
-      margin: 0 auto;
-    }
-
-    .header,
-    .footer {
-      border-bottom: 1px solid var(--border);
-      padding-bottom: 1rem;
-    }
-
-    .header h1 {
-      font-size: 3rem;
-      text-transform: uppercase;
-      letter-spacing: 1px;
-    }
-
-    .tagline {
-      margin-top: 0.25rem;
-      font-style: italic;
-      opacity: 0.6;
-    }
-
-    .zine-grid {
-      display: grid;
-      grid-template-columns: repeat(auto-fit, minmax(280px, 1fr));
-      gap: 2rem;
-      background-image: linear-gradient(to right, rgba(0,0,0,0.05) 1px, transparent 1px),
-                        linear-gradient(to bottom, rgba(0,0,0,0.05) 1px, transparent 1px);
-      background-size: 40px 40px;
-    }
-
-    .zine-issue {
-      border-left: 4px solid var(--highlight);
-      background: #fff;
-      padding: 1rem;
-      position: relative;
-      transition: background 0.2s;
-    }
-
-    .zine-issue:hover {
-      background: #f0f0f0;
-    }
-
-    .zine-issue::before {
-      content: "ARTICLE";
-      position: absolute;
-      top: -1.2rem;
-      left: 0;
-      font-size: 0.7rem;
-      background: var(--bg);
-      padding: 0 0.3rem;
-      color: var(--highlight);
-    }
-
-    .zine-issue h2 {
-      font-size: 1.2rem;
-      margin-bottom: 0.5rem;
-    }
-
-    .footer {
-      font-size: 0.9rem;
-      color: var(--highlight);
-    }
-
-    .footer a {
-      color: var(--highlight);
-      text-decoration: underline;
-    }
-  </style>
+  <title>∅ e240 — De-Black the Box</title>
+  <link rel="stylesheet" href="styles.css">
 </head>
 <body>
   <div class="container">
-    <div class="header">
-      <h1>∅ ZINE</h1>
+    <header class="header">
+      <h1>∅ e240 g!t</h1>
       <p class="tagline">De-Black the Box: A Grid Manifesto</p>
-    </div>
+    </header>
 
-    <div class="zine-grid">
-      <!-- Zine Article -->
-      <div class="zine-issue">
-        <h2>Issue 001: On Emptiness</h2>
-        <p>“Emptiness is form; form is emptiness.” Subtraction is sacred.</p>
+    <main class="zine-grid">
+      <!-- Square content blocks -->
+      <a class="zine-block" href="projects/project1.html">
+        <h2>Project 001: On Emptiness</h2>
+        <p>“Form follows absence.”</p>
+      </a>
+
+      <a class="zine-block" href="projects/project2.html">
+        <h2>Project 002: Modular World</h2>
+        <p>Each square a portal.</p>
+      </a>
+
+      <div class="zine-block image-block">
+        <img src="img/project1.jpg" alt="Visual Project" />
+        <p>Project image only, no link</p>
       </div>
 
-      <div class="zine-issue">
-        <h2>Issue 002: On Grids</h2>
-        <p>Mathematics as architecture. Grids as ideology, layout as language.</p>
-      </div>
+      <!-- Add more <a> or <div> blocks here as needed -->
+    </main>
 
-      <div class="zine-issue">
-        <h2>Issue 003: Zeros and Ones</h2>
-        <p>Binary code as poetry. Logic as chaos. Structure as clarity.</p>
-      </div>
-    </div>
-
-    <div class="footer">
+    <footer class="footer">
       <p>&copy; 2025 ∅ ZINE — <a href="#">View Source</a></p>
-    </div>
+    </footer>
   </div>
 </body>
 </html>
