--- a/index.html
+++ b/index.html
@@ -7,6 +7,19 @@
   <link rel="stylesheet" href="styles2.css">
 </head>
 <body>
+<nav class="nav">
+  <div class="nav-inner">
+    <div class="nav-brand">ZINE.</div>
+    <button class="nav-toggle" aria-label="Toggle menu">&#9776;</button>
+    <ul class="nav-links">
+      <li><a href="#">About</a></li>
+      <li><a href="#">Projects</a></li>
+      <li><a href="#">Contact</a></li>
+    </ul>
+  </div>
+</nav>
+
+  
   <div class="container">
     <header class="header">
       <h1>∅ e240 g!t</h1>
@@ -37,5 +50,16 @@
       <p>&copy; 2025 ∅ ZINE — <a href="#">View Source</a></p>
     </footer>
   </div>
+
+<script>
+  const toggle = document.querySelector('.nav-toggle');
+  const navLinks = document.querySelector('.nav-links');
+
+  toggle.addEventListener('click', () => {
+    navLinks.classList.toggle('show');
+  });
+</script>
+
+  
 </body>
 </html>
