--- a/index.html
+++ b/index.html
@@ -39,7 +39,7 @@
       </a>
 
       <div class="zine-block image-block">
-        <img src="img/project1.jpg" alt="Visual Project" />
+        <img src="img/8847527868_a17e201326_b,jpg" alt="Visual Project" />
         <p>Project image only, no link</p>
       </div>
 
