--- a/index.html
+++ b/index.html
@@ -28,12 +28,12 @@
 
     <main class="zine-grid">
       <!-- Square content blocks -->
-      <a class="zine-block" href="projects/project1.html">
+      <a class="zine-block" href="project1.html">
         <h2>Project 001: On Emptiness</h2>
         <p>“Form follows absence.”</p>
       </a>
 
-      <a class="zine-block" href="projects/project2.html">
+      <a class="zine-block" href="project1.html">
         <h2>Project 002: Modular World</h2>
         <p>Each square a portal.</p>
       </a>
