--- a/index.html
+++ b/index.html
@@ -9,7 +9,7 @@
 <body>
 <nav class="nav">
   <div class="nav-inner">
-    <div class="nav-brand">ZINE.</div>
+    <div class="nav-brand">BRUT.</div>
     <button class="nav-toggle" aria-label="Toggle menu">&#9776;</button>
     <ul class="nav-links">
       <li><a href="#">About</a></li>
@@ -47,7 +47,7 @@
     </main>
 
     <footer class="footer">
-      <p>&copy; 2025 ∅ ZINE — <a href="#">View Source</a></p>
+      <p>&copy; 2025 ∅ BRUT. by e240 — <a href="#">View Source</a></p>
     </footer>
   </div>
 
