--- a/escape.html
+++ b/escape.html
@@ -6,15 +6,34 @@
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <link rel="stylesheet" href="style.css">
   <style>
+
+    .ascii-canvas {
+  position: fixed;
+  top: 0;
+  left: 0;
+  z-index: -1;
+  opacity: 0.07;
+  pointer-events: none;
+  width: 100vw;
+  height: 100vh;
+}
     body {
-      background: #000;
+      background: #fefefe;
       color: #00ff99;
       font-family: 'Courier New', monospace;
       font-size: 16px;
       line-height: 1.5;
       margin: 0;
       padding: 2em;
+      background-image: repeating-linear-gradient(
+    0deg,
+    #fff,
+    #fff 1px,
+    #eee 1px,
+    #eee 2px
+  );
     }
+    
 
     .terminal {
       max-width: 800px;
@@ -74,5 +93,30 @@
 
     <p><span class="blink">█</span></p>
   </div>
+  <canvas id="asciiCanvas" class="ascii-canvas"></canvas>
+
+  <script>
+  const canvas = document.getElementById("asciiCanvas");
+  const ctx = canvas.getContext("2d");
+
+  canvas.width = window.innerWidth;
+  canvas.height = window.innerHeight;
+
+  const asciiArt = [
+    "█▀▀▀▀▀▀▀▀▀▀▀▀▀▀▀▀▀▀▀▀█",
+    "█        ███        █",
+    "█   ███  █ █  ███    █",
+    "█   █ █      █ █     █",
+    "█        ███         █",
+    "█▄▄▄▄▄▄▄▄▄▄▄▄▄▄▄▄▄▄▄▄█"
+  ];
+
+  ctx.font = "12px Courier New";
+  ctx.fillStyle = "#111"; // Or #0f0 for green glow terminal
+
+  asciiArt.forEach((line, i) => {
+    ctx.fillText(line, 20, 50 + i * 16);
+  });
+</script>
 </body>
 </html>
