--- a/about.html
+++ b/about.html
@@ -1,3 +1,29 @@
+<!DOCTYPE html>
+<html lang="en">
+<head>
+  <meta charset="UTF-8" />
+  <meta name="viewport" content="width=device-width, initial-scale=1.0"/>
+  <title>∅ about.</title>
+  <link rel="stylesheet" href="styles2.css">
+</head>
+<body>
+<nav class="nav">
+  <div class="nav-inner">
+    <div class="nav-brand">BRUT.</div>
+    <button class="nav-toggle" aria-label="Toggle menu">&#9776;</button>
+    <ul class="nav-links">
+      <li><a href="#">About</a></li>
+      <li><a href="#">Projects</a></li>
+      <li><a href="#">Contact</a></li>
+    </ul>
+  </div>
+</nav>
+
+  
+
+
+   
+
 <pre class="ascii-callout">
 >> ARE YOU OUT THERE?
 
@@ -27,3 +53,23 @@ No optimization. No hustle. No feed.
 
 [ Enter if you must. Leave nothing the same. ]
 </pre>
+
+   <footer class="footer">
+      <p>&copy; 2025 ∅ BRUT. by e240 — <a href="#">View Source</a></p>
+    </footer>
+  </div>
+
+<script>
+  const toggle = document.querySelector('.nav-toggle');
+  const navLinks = document.querySelector('.nav-links');
+
+  toggle.addEventListener('click', () => {
+    navLinks.classList.toggle('show');
+  });
+</script>
+
+  <footer class="footer-terminal">
+  <p>0011001000100001 // ⌁ transmission from the periphery complete</p>
+</footer>
+</body>
+</html>
