--- a/index.html
+++ b/index.html
@@ -12,7 +12,7 @@
     <div class="nav-brand">BRUT.</div>
     <button class="nav-toggle" aria-label="Toggle menu">&#9776;</button>
     <ul class="nav-links">
-      <li><a href="#">About</a></li>
+      <li><a href="about.html">About</a></li>
       <li><a href="#">Projects</a></li>
       <li><a href="#">Contact</a></li>
     </ul>
