--- a/project2.html
+++ b/project2.html
@@ -24,7 +24,7 @@
 
     const chars = ['█', '▓', '▒', '░', ' '];
     const img = new Image();
-    img.src = "brut1bit.png"; // save your 1-bit image as 'brut1bit.png' in the same folder
+    img.src = "/img/brut1bit.png"; // save your 1-bit image as 'brut1bit.png' in the same folder
 
     function drawASCII(image) {
       const charW = 8;
