--- a/project2.html
+++ b/project2.html
@@ -8,7 +8,7 @@
     html, body {
       margin: 0;
       padding: 0;
-      background: white;
+      background: green;
       overflow: hidden;
     }
     canvas {
@@ -33,7 +33,7 @@
 
     const asciiChars = ['█', '▓', '▒', '░', ' '];
     const asciiImage = new Image();
-    asciiImage.src = "ascii-brut.png";
+    asciiImage.src = "img/brut1bit.png";
 
     function drawASCII(image) {
       const charW = 8;
