--- a/project2.html
+++ b/project2.html
@@ -3,12 +3,12 @@
 <head>
   <meta charset="UTF-8" />
   <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-  <title>BRUT</title>
+  <title>BRUT33</title>
   <style>
     html, body {
       margin: 0;
       padding: 0;
-      background: green;
+      background: grey;
       overflow: hidden;
     }
     canvas {
